# mini_dash_data

./: .gitignore  Procfile  accuracy_api.py  api.py  applicability.py  brier_skill_score.py  compute_attribute_agreement_scores_from_eval_run.py  debug_yards_gained.py  eval_fai_response.py  eval_metrics.py  metadata.csv  mini_eval_dash_v3.html  nixpacks.toml  play_records.csv  pyproject.toml  requirements.txt  test_accuracy_api.py  test_api_accuracy.py  test_brier_probs.py  test_full_probs.py  test_yards_accuracy.py
transport_heads/: __init__.py  accuracy_http.py  accuracy_websocket.py  http.py  websocket.py
