[project]
name = "mini-eval-dash-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torchmetrics>=1.8.2",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
